added some in ui

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- head part -->
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://image.cnbcfm.com/api/v1/image/106826305-1624383819971-106826305-1611074293047-gettyimages-1295325607-_e6w9660_2021010863111059.jpg?v=1633962398&w=740&h=416&ffmt=webp&vtcrop=y" />
